# csc-skill-test

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
notebooks/: bdi_pipeline_walkthrough.ipynb  pipeline_walkthrough.ipynb  rl_pipeline_walkthrough.ipynb
src/csc/: __init__.py  cli.py  config.py
src/csc/agents/: base.py
src/csc/agents/demand_review/: agent.py  prompts.py  tools.py
src/csc/agents/depot_capacity/: agent.py  prompts.py  tools.py
src/csc/agents/plant_capacity/: agent.py  prompts.py  tools.py
src/csc/agents/portfolio_review/: agent.py  prompts.py  tools.py
src/csc/agents/supply_review/: agent.py  prompts.py  tools.py
src/csc/bdi/: __init__.py  base_agent.py  beliefs.py  desires.py  intentions.py
src/csc/bdi/agents/: __init__.py  demand_agent.py  depot_agent.py  plant_agent.py  portfolio_agent.py  supply_agent.py
src/csc/data/: master_generator.py  seed.py
src/csc/data/output/: changeover_rules.json  depots.json  enrollment_forecasts.json  equipment_lines.json  inventory_positions.json  materials.json  patient_cohorts.json  plants.json  sites.json  transport_lanes.json  trials.json
src/csc/models/: __init__.py  capacity.py  common.py  demand.py  material.py  network.py  supply.py  trial.py
src/csc/orchestrator/: bdi_pipeline.py  pipeline.py  resolver.py  rl_pipeline.py  state.py
src/csc/reports/: terminal.py  writer.py
src/csc/rl/: __init__.py  action_mappers.py  base_agent.py  obs_builders.py  rewards.py
src/csc/rl/agents/: __init__.py  batch_agent.py  capacity_agent.py  demand_agent.py  (+1 more)
(+9 files in other folders)
